--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <p>Full access for less than &dollar;1 a day</p>
 
-  <button style="button" class="btn btn-lg btn-block">Sign Up</button>
+  <button type="button" class="btn btn-lg btn-block">Sign Up</button>
 </div>
 <div class="col col-lg-6 col-md-12 col-sm-12 section-right">
   <h3>Why Us</h3>
